Fix Top Products By Unit Sold admin label

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -534,6 +534,7 @@ en:
         promotion_categories: Promotion Categories
         properties: Properties
         prototypes: Prototypes
+        reports_top_products_by_unit_sold: Top Products By Unit Sold
         reports_total_orders: Total Orders
         reports_total_sales: Total Sales
         reports_average_order_values: Average Order Value
