--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -762,7 +762,7 @@ en:
       last_month: Last Month
       this_year: This Year
       last_year: Last Year
-      custom: Custom
+      custom: Custom Date Range
     default: Default
     default_country_cannot_be_deleted: Default country cannot be deleted
     default_currency: Default currency
