Changes checkout payment flow

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -469,6 +469,7 @@ en:
     activate: Activate
     active: Active
     add: Add
+    add_new_credit_card: Add a new card
     add_action_of_type: Add action of type
     add_country: Add Country
     add_coupon_code: Add Coupon Code
