--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -816,6 +816,7 @@ en:
     exceptions:
       count_on_hand_setter: Cannot set count_on_hand manually, as it is set automatically by the recalculate_count_on_hand callback. Please use `update_column(:count_on_hand, value)` instead.
     exchange_for: Exchange for
+    existing_addresses: 'Existing %{address_name} Addresses'
     expedited_exchanges_warning: "Any specified exchanges will ship to the customer immediately upon saving. The customer will be charged the full amount of the item if they do not return the original item within %{days_window} days."
     excl: excl.
     expiration: Expiration
@@ -1654,6 +1655,7 @@ en:
     use_s3: Use Amazon S3 For Images
     used: Used
     user: User
+    user_default_addresses_updated: User default addresses were updated
     user_rule:
       choose_users: Choose users
     users: Users
