--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1664,6 +1664,7 @@ en:
     time: Time
     to_add_variants_you_must_first_define: To add variants, you must first define
     total: Total
+    total_customers: Total customers
     total_orders: Total Orders
     top_products_by_unit_sold: Top Products By Unit Sold
     average_order_value: Average Order Value
