--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -679,8 +679,8 @@ en:
     code: Code
     company: Company
     complete: complete
-    completed_at_min: Date from
-    completed_at_max: Date to
+    date_from: Date from
+    date_to: Date to
     configuration: Configuration
     configurations: Configurations
     confirm: Confirm
