[SD-591] Style new & edit address_form

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
         address1: Address
         address2: Address (contd.)
         city: City
+        company: Company
         country: Country
         firstname: First Name
         lastname: Last Name
