--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1664,6 +1664,7 @@ en:
     tiered_percent: Tiered Percent
     time: Time
     to_add_variants_you_must_first_define: To add variants, you must first define
+    top_n: Top N
     total: Total
     total_customers: Total customers
     total_orders: Total Orders
