--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -572,6 +572,7 @@ en:
     all_adjustments_opened: All adjustments successfully opened!
     all_departments: All departments
     all_items_have_been_returned: All items have been returned
+    all_rights_reserved: All rights reserved
     already_have_account: Already have an account?
     alt_text: Alternative Text
     alternative_phone: Alternative Phone
@@ -678,6 +679,7 @@ en:
     confirm: Confirm
     confirm_delete: Confirm Deletion
     confirm_password: Password Confirmation
+    contact_us: Contact us
     continue: Continue
     continue_as_guest: Continue as a guest
     continue_shopping: Continue shopping
@@ -842,6 +844,7 @@ en:
     flat_percent: Flat Percent
     flat_rate_per_order: Flat Rate
     flexible_rate: Flexible Rate
+    follow_us: Follow us
     forgot_password: Forgot password?
     free_shipping: Free Shipping
     free_shipping_amount: "-"
