--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -7,15 +7,42 @@ hidden: true
 
 ## Major/New Features
 
+Spree 4.1 comes with a completely new mobile-first ultra fast Storefront powered by [Turbolinks](https://github.com/turbolinks/turbolinks).
+
+### Mobile-first Storefront
+
+We've redesigned the Storefront UI from scratch for the mobile-era. Fully responsive layout with mobile and tablet devices in mind. We've implementes all the best practices making it pretty and useful for the end users.
+
+### Blazing fast performance
+
+Performance is one of the leading factors in eCommerce conversion rates and SEO traffic. It was one of our goals to reduce page views loading times and make the UI snappy and responsive.
+
+We've optimized both frontend and the backend. Eliminating [n+1 queries](https://guides.rubyonrails.org/active_record_querying.html#eager-loading-associations), implementing [full page caching](https://guides.rubyonrails.org/caching_with_rails.html#conditional-get-support), improving  JavaScript evaluation time - it all resulted in amazing [Google lighthouse](https://developers.google.com/web/tools/lighthouse) scores, even on low performance hosting options.
+
+Which leads to more conversions, more SEO traffic, more sales and more businness value brought to the business owners.
+
+### SEO - all checkbox checked!
+
+We've greatly improved SEO support by implementing [JSON-LD](https://en.wikipedia.org/wiki/JSON-LD) and [OpenGraph](https://ogp.me/) support. At the same time keeping in line with all the SEO best practices to make your storefront no 1 in search results.
+
+### Turbolinks - single-page application without the hassle
+
+[Turbolinks](https://github.com/turbolinks/turbolinks) makes navigating your web application faster. Get the performance benefits of a single-page application without the added complexity of a client-side JavaScript framework.
+
+Of course you can still combine it with React, Vue or Angular!
+
+### Easy migration path
+
+Just follow [Follow 4.0 to 4.1 upgrade guide](/developer/upgrades/four-dot-oh-to-four-dot-one.html) to upgrade your current store to the new UI.
 
 ## Installation
 
 ### Add Spree gems to Gemfile
 
 ```ruby
-gem 'spree', '~> 4.1'
-gem 'spree_auth_devise', '~> 4.1'
-gem 'spree_gateway', '~> 3.6'
+gem 'spree', '~> 4.1.0.rc1'
+gem 'spree_auth_devise', '~> 4.1.0.rc1'
+gem 'spree_gateway', '~> 3.7'
 ```
 
 ### Run `bundle install`
@@ -30,7 +57,7 @@ rails g spree_gateway:install
 
 ## Upgrade
 
-[4.0 to 4.1 upgrade guide](/developer/upgrades/four-dot-oh-to-four-dot-one.html)
+[Follow 4.0 to 4.1 upgrade guide](/developer/upgrades/four-dot-oh-to-four-dot-one.html)
 
 ## Noteworthy changes
 
