--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -7,11 +7,13 @@ hidden: true
 
 ## Major/New Features
 
-Spree 4.1 comes with a completely new mobile-first ultra fast Storefront powered by [Turbolinks](https://github.com/turbolinks/turbolinks).
+Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront powered by [Turbolinks](https://github.com/turbolinks/turbolinks).
 
 ### Mobile-first Storefront
 
-We've redesigned the Storefront UI from scratch for the mobile-era. Fully responsive layout with mobile and tablet devices in mind. We've implementes all the best practices making it pretty and useful for the end users.
+We've redesigned the Storefront UI from scratch for the mobile-era. Fully responsive layout with mobile and tablet devices in mind. We've implemented all the best practices making it pretty and useful for the end-users.
+
+iPhone, Android, iPad, desktop - no matter the device, the new storefront is ready to handle all of those, out of the box!
 
 ### Blazing fast performance
 
@@ -19,7 +21,7 @@ Performance is one of the leading factors in eCommerce conversion rates and SEO 
 
 We've optimized both frontend and the backend. Eliminating [n+1 queries](https://guides.rubyonrails.org/active_record_querying.html#eager-loading-associations), implementing [full page caching](https://guides.rubyonrails.org/caching_with_rails.html#conditional-get-support), improving  JavaScript evaluation time - it all resulted in amazing [Google lighthouse](https://developers.google.com/web/tools/lighthouse) scores, even on low performance hosting options.
 
-Which leads to more conversions, more SEO traffic, more sales and more businness value brought to the business owners.
+This leads to **more conversions**, **more SEO traffic**, **more sales** and more market value brought to the business owners.
 
 ### SEO - all checkbox checked!
 
@@ -29,7 +31,7 @@ We've greatly improved SEO support by implementing [JSON-LD](https://en.wikipedi
 
 [Turbolinks](https://github.com/turbolinks/turbolinks) makes navigating your web application faster. Get the performance benefits of a single-page application without the added complexity of a client-side JavaScript framework.
 
-Of course you can still combine it with React, Vue or Angular!
+Of course, you can still combine it with React, Vue or Angular!
 
 ### Easy migration path
 
