Added customization docs links

--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -7,21 +7,33 @@ hidden: true
 
 ## Major/New Features
 
-Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront powered by [Turbolinks](https://github.com/turbolinks/turbolinks).
+Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront which you can easily customize to your business requirements. 
+
+### Demo
+
+Try it for yourself, check out this fashion site demo: [demo.spreecommerce.org](https://demo.spreecommerce.org/)
 
 ### Mobile-first Storefront
 
-We've redesigned the Storefront UI from scratch for the mobile-era. Fully responsive layout with mobile and tablet devices in mind. We've implemented all the best practices making it pretty and useful for the end-users.
+We've redesigned the Storefront UI from scratch for the mobile. Fully responsive layout with mobile and tablet devices in mind. We've implemented all the best practices making it pretty and useful for the end-users.
 
 iPhone, Android, iPad, desktop - no matter the device, the new storefront is ready to handle all of those, out of the box!
+
+### Easy customization
+
+The new Spree UX is fully customizable so feel free to tweak it to your needs: the overall styling (colors, fonts, roundings, borders), header, footer, placeholder images and text, SEO settings.
+
+To help you customize your eCommerce platfom we’ve prepared:
+* [a slide deck with a step-by-step walkthrough](http://bit.ly/new-spree-ux)
+* [a detailed technical how-to doc](http://bit.ly/spree-ux-customization-docs)
 
 ### Blazing fast performance
 
 Performance is one of the leading factors in eCommerce conversion rates and SEO traffic. It was one of our goals to reduce page views loading times and make the UI snappy and responsive.
 
-We've optimized both frontend and the backend. Eliminating [n+1 queries](https://guides.rubyonrails.org/active_record_querying.html#eager-loading-associations), implementing [full page caching](https://guides.rubyonrails.org/caching_with_rails.html#conditional-get-support), improving  JavaScript evaluation time - it all resulted in amazing [Google lighthouse](https://developers.google.com/web/tools/lighthouse) scores, even on low performance hosting options.
+We've optimized both frontend and the backend. Eliminating [n+1 queries](https://guides.rubyonrails.org/active_record_querying.html#eager-loading-associations), implementing [full page caching](https://guides.rubyonrails.org/caching_with_rails.html#conditional-get-support), improving  JavaScript evaluation time - it all resulted in amazing [Google lighthouse](https://developers.google.com/web/tools/lighthouse) scores, even on low performance hosting options and with poor mobile internet connections.
 
-This leads to **more conversions**, **more SEO traffic**, **more sales** and more market value brought to the business owners.
+This leads to **more conversions**, **more organic search traffic**, **more sales** and more market value brought to the business owners.
 
 ### SEO - all checkbox checked!
 
