Additional information added

--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -7,7 +7,7 @@ hidden: true
 
 ## Major/New Features
 
-Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront which you can easily customize to your business requirements. 
+Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront which you can easily customize to your brand or business requirements. The new Storefront UI was open sourced by [Spark Solutions team](https://sparksolutions.co/) built upon experiences from dozens of eCommerce projects.
 
 ### Demo
 
@@ -24,6 +24,7 @@ iPhone, Android, iPad, desktop - no matter the device, the new storefront is rea
 The new Spree UX is fully customizable so feel free to tweak it to your needs: the overall styling (colors, fonts, roundings, borders), header, footer, placeholder images and text, SEO settings.
 
 To help you customize your eCommerce platfom we’ve prepared:
+
 * [a slide deck with a step-by-step walkthrough](http://bit.ly/new-spree-ux)
 * [a detailed technical how-to doc](http://bit.ly/spree-ux-customization-docs)
 
@@ -48,6 +49,16 @@ Of course, you can still combine it with React, Vue or Angular!
 ### Easy migration path
 
 Just follow [Follow 4.0 to 4.1 upgrade guide](/developer/upgrades/four-dot-oh-to-four-dot-one.html) to upgrade your current store to the new UI.
+
+### Contact
+
+Feel free to [reach out with questions or support requests](https://sparksolutions.co/contact/),
+
+This new Spree UX will be improved and optimized even more. We very much welcome your feedback and suggestions.
+
+### About Spark Solutions
+
+[Spark Solutions]((https://sparksolutions.co/)) is a software development agency specialized in Ruby on Rails, Spree Commerce and Javascript development. We’ve been leading Spree open-source efforts since 2016 as its core team. We also do client work. Our project teams consist of UX and UI designers, Software Engineers, Testers and Project Managers practicing agile project delivery. We’ll integrate our team with yours to jointly architect, deliver, maintain and scale the software products you need. You drive the project with requirements and acceptance testing and we help you deliver faster using industry-standard project management and comms best practices.
 
 ## Installation
 
