--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -72,6 +72,12 @@ gem 'spree_gateway', '~> 3.7'
 
 ### Run `bundle install`
 
+**Note**: if you run into `Bundler could not find compatible versions for gem "sprockets":` error message, please run 
+
+```bash
+bundle update
+```
+
 ### Use the install generators to set up Spree
 
 ```shell
