--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -5,6 +5,8 @@ order: 0
 hidden: true
 ---
 
+<a href="https://demo.spreecommerce.org"><img src="https://spreecommerce.org/wp-content/uploads/2020/01/Spree-4-1-new-ux-demo.png" /></a>
+
 ## Major/New Features
 
 Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront which you can easily customize to your brand or business requirements. The new Storefront UI was open sourced by [Spark Solutions team](https://sparksolutions.co/) built upon experiences from dozens of eCommerce projects.
@@ -57,6 +59,8 @@ Feel free to [reach out with questions or support requests](https://sparksolutio
 This new Spree UX will be improved and optimized even more. We very much welcome your feedback and suggestions.
 
 ### About Spark Solutions
+
+<a href="https://sparksolutions.co"><img src="https://sparksolutions.co/wp-content/uploads/2015/01/logo-ss-tr-221x100.png" alt="Spark Solutions"></a>
 
 [Spark Solutions](https://sparksolutions.co/) is a software development agency specialized in Ruby on Rails, Spree Commerce and Javascript development. We’ve been leading Spree open-source efforts since 2016 as its core team. We also do client work. Our project teams consist of UX and UI designers, Software Engineers, Testers and Project Managers practicing agile project delivery. We’ll integrate our team with yours to jointly architect, deliver, maintain and scale the software products you need. You drive the project with requirements and acceptance testing and we help you deliver faster using industry-standard project management and comms best practices.
 
