--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -38,7 +38,7 @@ We've optimized both frontend and the backend. Eliminating [n+1 queries](https:/
 
 This leads to **more conversions**, **more organic search traffic**, **more sales** and more market value brought to the business owners.
 
-### SEO - all checkbox checked!
+### SEO and structured data
 
 We've greatly improved SEO support by implementing [JSON-LD](https://en.wikipedia.org/wiki/JSON-LD) and [OpenGraph](https://ogp.me/) support. At the same time keeping in line with all the SEO best practices to make your storefront no 1 in search results.
 
