Refactor admin ReturnAuthorizations controller to not use unsafe :send
Using :send with user-input is not safe even having a `!`
added in the end.
Read more here
https://ruby-doc.org/core-2.6.5/doc/security_rdoc.html#label-send

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1367,6 +1367,7 @@ en:
       authorized: Authorized
       canceled: Canceled
     return_authorization_updated: Return authorization updated
+    return_authorization_canceled: Return authorization canceled
     return_authorizations: Return Authorizations
     return_item_inventory_unit_ineligible: Return item's inventory unit must be shipped
     return_item_inventory_unit_reimbursed: Return item's inventory unit is already reimbursed
