--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -9,7 +9,7 @@ hidden: true
 
 ## Major/New Features
 
-Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront which you can easily customize to your brand or business requirements. The new Storefront UI was open sourced by [Spark Solutions team](https://sparksolutions.co/) built upon experiences from dozens of eCommerce projects.
+Spree 4.1 comes with a completely new mobile-first ultra-fast Storefront which you can easily customize to your brand or business requirements. The new Storefront UI was open sourced by [Spark Solutions team](https://sparksolutions.co/) built upon experiences from dozens of eCommerce projects. Special thanks go  to [Matthew Kennedy](https://github.com/MatthewKennedy) for helping out!
 
 ### Demo
 
