Use 4.1.0 final version everywhere

--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -69,8 +69,8 @@ This new Spree UX will be improved and optimized even more. We very much welcome
 ### Add Spree gems to Gemfile
 
 ```ruby
-gem 'spree', '~> 4.1.0.rc1'
-gem 'spree_auth_devise', '~> 4.1.0.rc1'
+gem 'spree', '~> 4.1'
+gem 'spree_auth_devise', '~> 4.1'
 gem 'spree_gateway', '~> 3.7'
 ```
 
