Fixed CHANGELOG, added 4.1 and 4.2 entries

--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -2,7 +2,6 @@
 title: Spree 4.1.0
 section: release_notes
 order: 0
-hidden: true
 ---
 
 <a href="https://demo.spreecommerce.org"><img src="https://spreecommerce.org/wp-content/uploads/2020/01/Spree-4-1-new-ux-demo.png" /></a>
@@ -102,4 +101,4 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
 ## Full Changelog
 
-You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/4-0-stable...master).
+You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/4-0-stable...4-1-stable).
