--- a/guides/src/content/release_notes/4_1_0.md
+++ b/guides/src/content/release_notes/4_1_0.md
@@ -31,6 +31,8 @@ To help you customize your eCommerce platfom we’ve prepared:
 
 ### Blazing fast performance
 
+<img src="https://spreecommerce.org/wp-content/uploads/2020/03/Spree4.1_GL_homepage_mobile.png" />
+
 Performance is one of the leading factors in eCommerce conversion rates and SEO traffic. It was one of our goals to reduce page views loading times and make the UI snappy and responsive.
 
 We've optimized both frontend and the backend. Eliminating [n+1 queries](https://guides.rubyonrails.org/active_record_querying.html#eager-loading-associations), implementing [full page caching](https://guides.rubyonrails.org/caching_with_rails.html#conditional-get-support), improving  JavaScript evaluation time - it all resulted in amazing [Google lighthouse](https://developers.google.com/web/tools/lighthouse) scores, even on low performance hosting options and with poor mobile internet connections.
