--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -675,6 +675,7 @@ en:
     close_all_adjustments: Close All Adjustments
     code: Code
     company: Company
+    compare_at_price: Compare at price
     complete: complete
     configuration: Configuration
     configurations: Configurations
