docs: add v2 variant serializer field removal to 4.2 release notes

--- a/guides/src/content/release_notes/4_2_0.md
+++ b/guides/src/content/release_notes/4_2_0.md
@@ -61,6 +61,7 @@ rails g spree_gateway:install
 
 Please review each of the noteworthy changes to ensure your customizations or extensions are not affected. If you are affected by a change, and have any suggestions please submit a PR to help the next person!
 
+* `Spree::Variant` delegated fields `name` `description` and `slug` have been removed from the Storefront V2 serializer to cut down on response sizes and overfetching. If you need these three fields you can simply include the product in the request.
 
 
 ## Full Changelog
