--- a/guides/src/content/release_notes/4_2_0.md
+++ b/guides/src/content/release_notes/4_2_0.md
@@ -1,5 +1,5 @@
 ---
-title: Spree 4.1.0
+title: Spree 4.2.0
 section: release_notes
 order: 0
 hidden: true
@@ -61,8 +61,9 @@ rails g spree_gateway:install
 
 Please review each of the noteworthy changes to ensure your customizations or extensions are not affected. If you are affected by a change, and have any suggestions please submit a PR to help the next person!
 
-* `Spree::Variant` delegated fields `name` `description` and `slug` have been removed from the Storefront V2 serializer to cut down on response sizes and overfetching. If you need these three fields you can simply include the product in the request.
+* `Spree::Variant` delegated fields `name` `description` and `slug` have been removed from the Storefront API V2 serializer to cut down on response sizes and overfetching. If you need these three fields you can simply include the product in the request.
 
+* API v1 controllers now inherit from `ActionController::API` rather than `ActionController::Base`
 
 ## Full Changelog
 
