--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1018,6 +1018,7 @@ en:
     name_or_sku: Name or SKU (enter at least first 3 characters of product name)
     nav_bar:
       admin_panel: Admin Panel
+      change_country: Change country
       close_menu: Close menu
       go_to_previous_menu: Go to previous menu
       log_in: LOG IN
