--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -615,6 +615,7 @@ en:
     calculated_reimbursements: Calculated Reimbursements
     calculator: Calculator
     calculator_settings_warning: If you are changing the calculator type, you must save first before you can edit the calculator settings
+    call_us_now: 'Call us now: '
     cancel: cancel
     canceled: Canceled
     canceler: Canceler
@@ -681,6 +682,8 @@ en:
     confirm: Confirm
     confirm_delete: Confirm Deletion
     confirm_password: Password Confirmation
+    contact_email: Contact email
+    contact_phone: Contact phone
     contact_us: Contact us
     continue: Continue
     continue_as_guest: Continue as a guest
@@ -849,6 +852,7 @@ en:
     flat_rate_per_order: Flat Rate
     flexible_rate: Flexible Rate
     follow_us: Follow us
+    footer_info: Footer info
     forgot_password: Forgot password?
     free_shipping: Free Shipping
     free_shipping_amount: "-"
