[SD-837] Changes 'email' edit link on my account to 'account info'

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -453,6 +453,7 @@ en:
     acceptance_errors: Acceptance errors
     accepted: Accepted
     account: Account
+    account_info: Account info
     account_updated: Account updated
     action: Action
     actions:
