--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1505,6 +1505,7 @@ en:
     show_discontinued: Show Discontinued
     show_only_complete_orders: Only show complete orders
     show_only_considered_risky: Only show risky orders
+    show_property: Show Property
     show_rate_in_label: Show rate in label
     sign_up: Sign Up
     sku: SKU
