--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -883,7 +883,7 @@ en:
     homepage:
       bestsellers: BESTSELLERS
       fashion_trends: FASHION TRENDS
-      fashion_trends_note: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+      fashion_trends_note: Want to rock this season’s hottest trend in style? These are the top fashion from Summer 2019 Fashion Weeks that are coming our way this season.
       men: MEN
       new: NEW
       new_collection: NEW COLLECTION
