--- a/api/config/locales/en.yml
+++ b/api/config/locales/en.yml
@@ -33,4 +33,6 @@ en:
           errors:
             the_wishlist_could_not_be_destroyed: The wishlist could not be destroyed.
           wrong_quantity: Quantity has to be greater than 0
+        metadata:
+          invalid_params: Public and private metadata parameters should be objects
       wrong_shipment_target: target shipment is the same as original shipment
