--- a/api/config/locales/en.yml
+++ b/api/config/locales/en.yml
@@ -29,6 +29,8 @@ en:
         digitals:
           missing_file: 'Missing Digital Item: attachment'
           unauthorized: Error, you are not authorized to access this asset
+        metadata:
+          invalid_params: Public and private metadata parameters should be objects
         wishlist:
           errors:
             the_wishlist_could_not_be_destroyed: The wishlist could not be destroyed.
