Show more specific error when adding item to cart fails
When you try to add an item to the cart that is cannot be supplied
you get an error that the Quantity is not available. There is the case
when you have the available quantity, but the variant is not .available?
which happens when the product has status different from Active (Draft or
Archived). For this case we also consider that the item cannot be supplied
but we should specify that it is because of the status and not the quantity.

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1122,6 +1122,7 @@ en:
     number: Number
     ok: OK
     on_hand: On Hand
+    only_active_products_can_be_added_to_cart: Draft and archived products cannot be added to cart, please mark the product as active before.
     open: Open
     open_all_adjustments: Open All Adjustments
     option_type: Option Type
