--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1751,6 +1751,7 @@ en:
     transfer_from_location: Transfer From
     transfer_stock: Transfer Stock
     transfer_to_location: Transfer To
+    translations: Translations
     tree: Tree
     type: Type
     type_to_search: Type to search
