--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1215,6 +1215,7 @@ en:
     payment_information: Payment Information
     payment_method: Payment Method
     payment_methods: Payment Methods
+    payment_method_configuration: Payment Method Configuration
     payment_method_not_supported: That payment method is unsupported. Please choose another one.
     payment_processing_failed: Payment could not be processed, please check the details you entered
     payment_processor_choose_banner_text: If you need help choosing a payment processor, please visit
